k8s-settings/service-a.yaml
# Deployment
apiVersion: apps/v1 # 기능 별 API 버전
kind: Deployment
metadata:
  name: service-a # deployment 이름
spec:
  replicas: 2
  selector: # 해당 Deployment 에서 관리하는 Pod label 정의
    matchLabels:
      app: service-a # service-a 라벨 을 가진 pod 만 관리
  template:
    metadata:
      labels:
        app: service-a # spec.selector 와 동일해야함
    spec:
      nodeSelector:
        service: app
      containers:
      - name: service-a
        image: kwakjihoon/service-a:latest
        ports:
        - containerPort: 8080

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
